testsuite/tests/grammar/invalid_lexers/rule_1.lkt
from common import Example

lexer foo_lexer {
    Termination <- "def"
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
